--- a/style.css
+++ b/style.css
@@ -408,3 +408,9 @@ footer button:hover {
         padding-left: 10px;
     }
 }
+@media (max-width:480px) {
+    .leaderboardSidebar{
+        display: none;
+    }
+    
+}
